Added a Card class, with various properties, and some methods for generating and shuffling a deck of cards.

--- a/BlackJack/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack/BlackJack.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Computer.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="ICard.cs" />
+    <Compile Include="Card.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
