- Move computer and player initialisation in to their respective classes. - Create a deck class that deals with the generation and shuffling of the deck. - Add a Game class for dealing with gamestates, though this wont be used until much later. - Tweaks to messages written.

--- a/BlackJack/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack/BlackJack.csproj
@@ -43,8 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Computer.cs" />
+    <Compile Include="Deck.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Card.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
