- Added a cardname property to Card to make it a bit friendlier. - Added a score, hand and playerType property to the players. - The players are now interfaces. - The players and deck are now initialised in their constructors. - Added methods for dealing cards. - Renamed the player class to Human. - Added in Dealing the starting hand of the game. - The players and the deck are now fields on the Program class so they can be used without needing to be passed around.

--- a/BlackJack/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack/BlackJack.csproj
@@ -47,7 +47,8 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="IPlayer.cs" />
+    <Compile Include="Human.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
