Added some day 3 stuff
Added the Day3 input file and a tiny bit of logic (but not really logic) for day 3

--- a/AdventOfCode/2015/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2015/AdventOfCode/AdventOfCode.csproj
@@ -60,7 +60,10 @@
     <Content Include="ExternalFiles\Day2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="ExternalFiles\Day3.txt" />
+    <Content Include="ExternalFiles\Day3.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
