--- a/AdventOfCode/2015/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2015/AdventOfCode/AdventOfCode.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Days\Day1.cs" />
     <Compile Include="Days\Day3.cs" />
     <Compile Include="Days\Day4.cs" />
+    <Compile Include="Days\Day5.cs" />
     <Compile Include="Days\IPuzzleDay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,6 +66,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ExternalFiles\Day4.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ExternalFiles\Day5.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
