Refactored the stream read to a static class
Refactored out the code for reading and looping through the input file in to a static class.

--- a/AdventOfCode/2015/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2015/AdventOfCode/AdventOfCode.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Days\Day6.cs" />
     <Compile Include="Days\Day7.cs" />
     <Compile Include="Days\IPuzzleDay.cs" />
+    <Compile Include="FileReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
